# trkr

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: code-quality.yml
trkr/: asgi.py  urls.py  wsgi.py
trkr/issues/: admin.py  apps.py  fields.py  models.py  serializers.py  views.py
trkr/issues/fixtures/: categories.json  test_data.json
trkr/issues/migrations/: 0001_initial.py
trkr/issues/templates/admin/issues/issue/: change_list.html
trkr/issues/tests/: test_api.py  test_models.py
trkr/settings/: base.py  dev.py  production.py
