[tool.poetry]
name = "Trkr"
version = "0.1.0"
description = "A simple bug tracker"
authors = ["Mikulas Mrva <mikulas.mrva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"
djangorestframework = "^3.12"
mypy = "^0.800"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
